
* Changes in Cdecl 9.8

** Added `extern "C" using` support
`extern "C" using` declarations are now supported.

** C++ `auto` help
The help for pseudo-English now correctly includes `auto` as a storage class
for C++98 and C++03.

** Adding `--explicit-int` to `--help`
Added (the missing) `--explicit-int` to the help message.


* Changes in Cdecl 9.7

** Multi-type `typedef`
Multiple types can now be declared in a single `typedef`:

    typedef int Int, *Pint;

** New abbreviations
There are new abbreviations:

    conv  conversion
    ctor  constructor
    dtor  destructor

** Qualified pointer spacing
Fixed spacing for qualified pointers.


* Changes in Cdecl 9.6

** Specific languages in error messages
Rather than just say "<feature> is not supported in <current-lang>", now says
"<feature> is not supported until <later-lang>."

** More constructor & destructor warning checks
Constructors and destructors are now checked for `throw`.  Constructor
parameters are now checked for warnings.

** Reserved identifier warnings
Warnings are now given for names that are reserved identifiers, specifically
names that match the patterns `_[A-Z_]*` (C and C++) or `*__*` (C++ only).

** Type redefinition error now includes existing type
If you attempt to redefine an existing type with a different type, the error
message now includes the existing type.

** Fixed `thread_local`
`thread_local` is now correctly allowed only in C11 or C++11 or later.

** Function `auto` parameters in C++20
Functions in C++20 now allow `auto` parameters.

** `_Bool`
`_Bool` is now recognized only in C99 and later and not in C++.

** `imaginary`
`imaginary` is now mapped only to `_Imaginary` in C99 and later and not in C++.

** `throw()` in C++20
`throw()` is no longer supported in C++20.

** Fixed `args` help
The help for `args` no longer prints `<name>` for when the current language is
either C2X or C++.


* Changes in Cdecl 9.5.1

** Functions as parameters